Commit the outstanding backend work
Everything here was already present in the working tree and running in tests,
but had never been recorded, so no deployed artifact corresponded to a known
revision. That is the same gap that kept the geo proxy off production, and it
covers work the mobile apps already call: IFSC lookup and the payout-account
change-challenge endpoints are absent from production for this reason too.

Includes payout bank-account encryption and its change audit, the matching
searching-clock and fairness scoring, moderation result caching and the golden
set, a retention job, request-IP resolution, Redis cache configuration, the
OSRM deployment scripts and setup guide, and migrations V58-V61.

V58 rationalises indexes and drops the unused audit_logs table.

Full suite green: 360 tests, 0 failures, 1 skipped.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>