@@ -1,6 +1,7 @@
 package com.helpinminutes.api.moderation;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import com.helpinminutes.api.moderation.dto.AIReviewResult;
 import com.helpinminutes.api.moderation.service.ModerationDecisionEngine;
 import com.helpinminutes.api.tasks.model.TaskStatus;
@@ -18,20 +19,14 @@ class ModerationDecisionEngineTest {
   @BeforeEach
   void setUp() {
     staticModerationService = new TaskModerationService();
-    staticModerationService.init();
     decisionEngine = new ModerationDecisionEngine(staticModerationService);
   }
 
   @Test
   void autoApprovesHighConfidenceLowRiskTask() {
-    AIReviewResult result = new AIReviewResult(
-        "APPROVED", 98, 10, 90,
-        List.of("Clear task"), Collections.emptyList(), false,
-        "{}", "z-ai/glm-4.7-flash-free", 150L
-    );
+    AIReviewResult result = approvedResult(98, 10);
 
-    TaskStatus status = decisionEngine.determineStatus(result, Collections.emptyList());
-    assertEquals(TaskStatus.AI_APPROVED, status);
+    assertEquals(TaskStatus.AI_APPROVED, decisionEngine.determineStatus(result, clean()));
   }
 
   @Test
@@ -39,35 +34,73 @@ class ModerationDecisionEngineTest {
     AIReviewResult result = new AIReviewResult(
         "REVIEW", 90, 75, 50,
         List.of("Suspicious activity"), List.of("HIGH_RISK"), true,
-        "{}", "z-ai/glm-4.7-flash-free", 200L
-    );
+        "{}", "gemini-2.5-flash-lite", 200L);
 
-    TaskStatus status = decisionEngine.determineStatus(result, Collections.emptyList());
-    assertEquals(TaskStatus.ADMIN_REVIEW, status);
+    assertEquals(TaskStatus.ADMIN_REVIEW, decisionEngine.determineStatus(result, clean()));
   }
 
   @Test
   void routesLowConfidenceTaskToAdminReview() {
-    AIReviewResult result = new AIReviewResult(
-        "APPROVED", 70, 20, 70,
-        List.of("Uncertain evaluation"), Collections.emptyList(), false,
-        "{}", "moonshotai/kimi-k3-free", 180L
-    );
+    AIReviewResult result = approvedResult(70, 20);
 
-    TaskStatus status = decisionEngine.determineStatus(result, Collections.emptyList());
-    assertEquals(TaskStatus.ADMIN_REVIEW, status);
+    assertEquals(TaskStatus.ADMIN_REVIEW, decisionEngine.determineStatus(result, clean()));
   }
 
+  /** A hard policy match is decisive; the model's opinion cannot overturn it. */
   @Test
-  void routesLocalPreCheckFlagsToAdminReview() {
-    AIReviewResult result = new AIReviewResult(
-        "APPROVED", 99, 5, 95,
-        List.of("Clear task"), Collections.emptyList(), false,
-        "{}", "z-ai/glm-4.7-flash-free", 100L
-    );
+  void rejectsWhenLocalScreeningFoundAHardPolicyMatch() {
+    AIReviewResult confidentlyApproved = approvedResult(99, 5);
+    var blocked = staticModerationService.screen("Errand", "Get me some ganja tonight");
 
-    List<String> localFlags = List.of("STATIC_CHECK_FLAG: Prohibited word detected");
-    TaskStatus status = decisionEngine.determineStatus(result, localFlags);
-    assertEquals(TaskStatus.ADMIN_REVIEW, status);
+    assertEquals(TaskStatus.ADMIN_REJECTED,
+        decisionEngine.determineStatus(confidentlyApproved, blocked));
+  }
+
+  /** The model may also reject outright, which the old prompt forbade it from doing. */
+  @Test
+  void honoursAnOutrightModelBlock() {
+    AIReviewResult blockedByModel = new AIReviewResult(
+        "BLOCK", 96, 95, 20,
+        List.of("Requests an illegal service"), Collections.emptyList(), false,
+        "{}", "gemini-2.5-flash-lite", 210L);
+
+    assertEquals(TaskStatus.ADMIN_REJECTED, decisionEngine.determineStatus(blockedByModel, clean()));
+  }
+
+  /**
+   * The fast path. A locally clean task is approved without a model verdict at all,
+   * which is what keeps the pipeline nearly free — and it must not depend on a
+   * provider being reachable.
+   */
+  @Test
+  void approvesALocallyCleanTaskWithNoModelVerdict() {
+    var clean = staticModerationService.screen("Cleaning", "Clean my kitchen and wash the dishes");
+
+    assertEquals(TaskStatus.AI_APPROVED, decisionEngine.determineStatus(null, clean));
+  }
+
+  /**
+   * The fail-open regression. When the model could not be reached for an ambiguous
+   * task, the client used to fabricate {@code APPROVED, confidence 85} and that
+   * sailed through. An escalated task with no verdict must reach a human.
+   */
+  @Test
+  void neverApprovesAnEscalatedTaskWhenTheModelIsUnreachable() {
+    var escalated = staticModerationService.screen(
+        "Pharmacy", "Buy cough syrup with low alcohol content");
+    assertEquals(TaskModerationService.Verdict.ESCALATE, escalated.verdict());
+
+    assertEquals(TaskStatus.ADMIN_REVIEW, decisionEngine.determineStatus(null, escalated));
+  }
+
+  private static AIReviewResult approvedResult(int confidence, int riskScore) {
+    return new AIReviewResult(
+        "APPROVED", confidence, riskScore, 90,
+        List.of("Clear task"), Collections.emptyList(), false,
+        "{}", "gemini-2.5-flash-lite", 150L);
+  }
+
+  private TaskModerationService.ScreeningResult clean() {
+    return staticModerationService.screen("Errand", "Deliver groceries to my home");
   }
 }
